Start creation page & set fixed height for header to reduce layout shift

--- a/src/app/(pages)/globals.css
+++ b/src/app/(pages)/globals.css
@@ -5,3 +5,130 @@
 * {
 	outline: transparent !important;
 }
+
+/* width */
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: rgb(79 70 229);
+	border-radius: 10px;
+}
+
+.wmde-markdown,
+.wmde-markdown-color {
+	background: transparent !important;
+}
+
+.wmde-markdown,
+.wmde-markdown h1,
+.wmde-markdown h2,
+.wmde-markdown h3,
+.wmde-markdown h4,
+.wmde-markdown h5,
+.wmde-markdown h6,
+.wmde-markdown .footnotes ol {
+	color: #e5e7eb !important;
+}
+
+.wmde-markdown hr {
+	border-bottom: 1px solid #e5e7eb;
+	background-color: #e5e7eb;
+}
+
+#horizontal-rules,
+#typographic-replacements,
+#emphasis,
+.wmde-markdown h2,
+.wmde-markdown h1 {
+	border-bottom: 1px solid #e5e7eb;
+}
+
+.wmde-markdown a.anchor {
+	display: none;
+}
+
+.wmde-markdown blockquote {
+	color: white;
+	border-left: 0.25em solid white;
+}
+
+.wmde-markdown code,
+.wmde-markdown tt {
+	background-color: #364150;
+	color: #e5e7eb;
+}
+
+.wmde-markdown pre {
+	border-radius: 3px;
+	background-color: #364150;
+}
+
+.wmde-markdown pre:hover .copied {
+	display: none;
+}
+
+.wmde-markdown table tr,
+.wmde-markdown table tr:nth-child(2n) {
+	background-color: #364150;
+	border-top: none;
+}
+
+.wmde-markdown table th,
+.wmde-markdown table td {
+	border: 1px solid #465160;
+}
+
+.wmde-markdown table {
+	border-radius: 3px;
+}
+
+.wmde-markdown hr {
+	height: 0;
+}
+
+.w-md-editor-text-pre .punctuation {
+	color: white !important;
+}
+
+.w-md-editor {
+	background-color: #364150 !important;
+	color: #e5e7eb;
+	border-radius: 0.375rem;
+}
+
+.w-md-editor-toolbar {
+	background-color: #364150 !important;
+	border-bottom: 1px solid #101826;
+	border-radius: 0.375rem 0.375rem 0 0;
+}
+
+.w-md-editor-toolbar li > button {
+	color: #e5e7eb !important;
+}
+
+.w-md-editor-toolbar li > button:hover,
+.w-md-editor-toolbar li > button:focus,
+.w-md-editor-toolbar li.active > button {
+	background-color: #1e2936 !important;
+	color: #e5e7eb !important;
+}
+
+.w-md-editor-preview {
+	box-shadow: inset 1px 0 0 0 #101826;
+}
+
+ol {
+	list-style-type: decimal;
+}
+
+ul {
+	list-style-type: disc;
+}
